Add edit functionality in JS

--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
         <h1 class="header"> To do list </h1>
         <form class="form-add-task" action="">
             <input class="input-add-task" type="text" placeholder="enter task" autofocus>
-            <button class="button btn-add-task" type="submit">Add task</button>
+            <button class="button btn-add-task" type="submit">Add</button>
         </form> 
         <div class="buttons">
             <button class="button btn-add" type="submit">Add</button>
             <button class="button btn-remove" type="submit">Remove</button>
             <button class="button btn-clear" type="submit">Clear</button>
         </div>
-        <ul class="task-list"></ul>
+        <ul class="task-list">
+        </ul>
     </div>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="js/script.js"></script>
